# deep_research_search

./: .env.example  README.md  pyproject.toml
deep_research_search/: config.py  deepsearch.py  find_gap_questions.py  generate_answer.py  logger.py  main.py  output_formats.py  prompts.py  read.py  reason.py  search.py  utils.py
